--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Welcome to Firebase Hosting</title>
+	<title>D.I.C.E L Mart</title>
 
 	<!-- update the version number as needed -->
 	<script src="/__/firebase/10.7.1/firebase-app-compat.js"></script>
@@ -22,7 +22,7 @@
       initialize the SDK after all desired features are loaded, set useEmulator to false
       to avoid connecting the SDK to running emulators.
     -->
-	<script defer src="/__/firebase/init.js?useEmulator=true"></script>
+	<script src="/__/firebase/init.js?useEmulator=true"></script>
 
 	<script src="firebase/config.js"></script>
 
@@ -45,6 +45,7 @@
 	<p id="load">Firebase SDK Loading&hellip;</p>
 
 
+	<h1>D.I.C.E L Mart</h1>
 
 	<div id="firebaseui-auth-container"></div>
 
