--- a/public/index.html
+++ b/public/index.html
@@ -56,8 +56,10 @@
 
 	<button id="sign-out">Sign Out</button>
 
+	<button id="test-btn">Test Button</button>
 
 
+	<script src="test-script.js"></script>
 
 </body>
 
