authentication separated from firebase

--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
 
 	<script src="https://www.gstatic.com/firebasejs/ui/6.1.0/firebase-ui-auth.js"></script>
 	<link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/6.1.0/firebase-ui-auth.css" />
-	<script src="firebase/auth.js"></script>
+	<script src="auth/auth.js"></script>
 
 	<link rel="stylesheet" href="style.css">
 </head>
