--- a/public/redirect.html
+++ b/public/redirect.html
@@ -11,13 +11,11 @@
 
     <div>
         <h1>Error 404 Not Found</h1>
-        <h3>Redirecting to home page in 2 seconds...</h3>
+        <h3>Redirecting to home page...</h3>
     </div>
 
     <script>
-        setTimeout(() => {
-            window.location.href = "/";
-        }, 2000);
+        window.location.replace("/");
     </script>
 
 </body>
