Basic login flow

--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,7 @@
 
 	<script src="https://www.gstatic.com/firebasejs/ui/6.1.0/firebase-ui-auth.js"></script>
 	<link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/6.1.0/firebase-ui-auth.css" />
+	<script src="auth/signIn.js"></script>
 	<script src="auth/auth.js"></script>
 
 	<link rel="stylesheet" href="style.css">
@@ -39,12 +40,9 @@
 
 	<div id="firebaseui-auth-container"></div>
 
-	<div id="sign-in-status"></div>
-	<div id="sign-in"></div>
 	<pre id="account-details"></pre>
 
 	<button id="sign-out">Sign Out</button>
-
 	<button id="test-btn">Test Button</button>
 
 
