Player Login and Logout

--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,8 @@
 	<script src="https://www.gstatic.com/firebasejs/ui/6.1.0/firebase-ui-auth.js"></script>
 	<link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/6.1.0/firebase-ui-auth.css" />
 	<script src="auth/signIn.js"></script>
-	<script src="auth/auth.js"></script>
+	<script src="auth/authUI.js"></script>
+
 
 	<link rel="stylesheet" href="style.css">
 </head>
@@ -39,14 +40,6 @@
 	<h1>D.I.C.E L Mart</h1>
 
 	<div id="firebaseui-auth-container"></div>
-
-	<pre id="account-details"></pre>
-
-	<button id="sign-out">Sign Out</button>
-	<button id="test-btn">Test Button</button>
-
-
-	<script src="test-script.js"></script>
 
 </body>
 
