--- a/public/player.html
+++ b/public/player.html
@@ -5,9 +5,25 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>D.I.C.E L Mart</title>
+
+
+	<script src="/__/firebase/10.7.1/firebase-app-compat.js"></script>
+	<script src="/__/firebase/10.7.1/firebase-auth-compat.js"></script>
+	<script src="/__/firebase/10.7.1/firebase-firestore-compat.js"></script>
+	<script src="/__/firebase/init.js?useEmulator=true"></script>
+
+	<script src="firebase/config.js"></script>
+    <script src="auth/verifyPlayer.js"></script>
+    <script src="auth/signOut.js"></script>
+    <script>
+        verifySignInOrReturnToIndex();
+    </script>
+
 </head>
 
 <body>
+
+    <button id="sign-out-btn">Sign Out</button>
 
 </body>
 
