Cleanup and standardized some naming

--- a/public/player.html
+++ b/public/player.html
@@ -13,6 +13,7 @@
 	<script src="/__/firebase/init.js?useEmulator=true"></script>
 
 	<script src="firebase/config.js"></script>
+	<script src="firebase/firestore.js"></script>
     <script src="auth/verifyPlayer.js"></script>
     <script src="auth/signOut.js"></script>
     <script>
