--- a/public/player.html
+++ b/public/player.html
@@ -12,10 +12,10 @@
 	<script src="/__/firebase/10.7.1/firebase-firestore-compat.js"></script>
 	<script src="/__/firebase/init.js?useEmulator=true"></script>
 
-	<script src="firebase/config.js"></script>
-	<script src="firebase/firestore.js"></script>
-    <script src="auth/verifyPlayer.js"></script>
-    <script src="auth/signOut.js"></script>
+	<script src="/firebase/config.js"></script>
+	<script src="/firebase/firestore.js"></script>
+    <script src="/auth/verifyPlayer.js"></script>
+    <script src="/auth/signOut.js"></script>
     <script>
         verifySignInOrReturnToIndex((player) => {
 			document.querySelector("#player-name").innerHTML = player.name;
