--- a/public/redirect.html
+++ b/public/redirect.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>D.I.C.E L Mart</title>
+	<title>Not Found - D.I.C.E L Mart</title>
 
 </head>
 
@@ -12,12 +12,8 @@
 
     <div>
         <h1>Error 404 Not Found</h1>
-        <h3>Redirecting to home page...</h3>
+        <h4>Return to <a href="/">Home Page</a></h4>
     </div>
-
-    <script>
-        window.location.replace("/");
-    </script>
 
 </body>
 
