--- a/public/auth/login.html
+++ b/public/auth/login.html
@@ -4,32 +4,30 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>D.I.C.E L Mart</title>
-
+	<title>Sign In - D.I.C.E L Mart</title>
 
 	<script src="/__/firebase/10.7.1/firebase-app-compat.js"></script>
 	<script src="/__/firebase/10.7.1/firebase-auth-compat.js"></script>
 	<script src="/__/firebase/10.7.1/firebase-firestore-compat.js"></script>
+
 	<script src="/__/firebase/init.js?useEmulator=true"></script>
 
 	<script src="/firebase/config.js"></script>
 	<script src="/firebase/firestore.js"></script>
-    <script src="/auth/verifyPlayer.js"></script>
-    <script src="/auth/signOut.js"></script>
-    <script>
-        verifySignInOrReturnToIndex((player) => {
-			document.querySelector("#player-name").innerHTML = player.name;
-			document.querySelector("#player-email").innerHTML = player.email;
-		});
-    </script>
 
+	<script src="https://www.gstatic.com/firebasejs/ui/6.1.0/firebase-ui-auth.js"></script>
+	<link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/6.1.0/firebase-ui-auth.css" />
+	<script src="/auth/signIn.js"></script>
+	<script src="/auth/authUI.js"></script>
+
+	<link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
-	<p id="player-name"></p>
-	<p id="player-email"></p>
-    <button id="sign-out-btn">Sign Out</button>
+	<h1>Sign In To D.I.C.E L Mart</h1>
+
+	<div id="firebaseui-auth-container"></div>
 
 </body>
 
