--- a/public/404.html
+++ b/public/404.html
@@ -12,8 +12,13 @@
 
     <div>
         <h1>Error 404 Not Found</h1>
+        <p>The Requested URL: <i><span id="current-url"></span></i> is not found.</p>
         <h4>Return to <a href="/">Home Page</a></h4>
     </div>
+
+    <script>
+        document.querySelector("#current-url").innerHTML = window.location.href;
+    </script>
 
 </body>
 
