Updated sign in flow with top bar

--- a/public/admin/adminHome.html
+++ b/public/admin/adminHome.html
@@ -13,6 +13,7 @@
 
 	<script src="/firebase/config.js"></script>
 	<script src="/firebase/firestore.js"></script>
+	<script src="/ui/general.js"></script>
     <script src="/auth/verifyPlayer.js"></script>
     <script src="/auth/signOut.js"></script>
     <script src="/admin/verifyAdmin.js"></script>
