--- a/public/auth/login.html
+++ b/public/auth/login.html
@@ -15,9 +15,12 @@
 	<script src="/firebase/config.js"></script>
 	<script src="/firebase/firestore.js"></script>
 
+	<script src="/ui/general.js"></script>
+
 	<script src="https://www.gstatic.com/firebasejs/ui/6.1.0/firebase-ui-auth.js"></script>
 	<link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/6.1.0/firebase-ui-auth.css" />
 	<script src="/auth/signIn.js"></script>
+	<script src="/auth/signOut.js"></script>
 	<script src="/auth/authUI.js"></script>
 
 	<link rel="stylesheet" href="style.css">
