Admin Management Page

--- a/public/admin/adminManagement/adminManagement.html
+++ b/public/admin/adminManagement/adminManagement.html
@@ -53,8 +53,22 @@
 		</div>
 	</div>
 
-	<h1>D.I.C.E L Mart ADMIN</h1>
-	<button class="admin-management-btn">Admin Management</button>
+	<h1>D.I.C.E L Mart ADMIN Management</h1>
+    
+	<div>
+		<div>
+			<h3>Admins</h3>
+			<div>
+
+			</div>
+		</div>
+		<div>
+			<h3>Players (non-Admins)</h3>
+			<div>
+				
+			</div>
+		</div>
+	</div>
 
 	<link rel="stylesheet" href="/style.css">
 	<script src="/ui/topBar.js"></script>
