Adding and Removing admins

--- a/public/admin/adminManagement/adminManagement.html
+++ b/public/admin/adminManagement/adminManagement.html
@@ -58,20 +58,29 @@
 	<div>
 		<div>
 			<h3>Admins</h3>
-			<div>
-
-			</div>
+			<table id="admins-table">
+				<tr>
+					<th>Name</th>
+					<th>Email</th>
+					<th>Remove Admin</th>
+				</tr>
+			</table>
 		</div>
 		<div>
 			<h3>Players (non-Admins)</h3>
-			<div>
-				
-			</div>
+			<table id="players-table">
+				<tr>
+					<th>Name</th>
+					<th>Email</th>
+					<th>Add Admin</th>
+				</tr>
+			</table>
 		</div>
 	</div>
 
 	<link rel="stylesheet" href="/style.css">
 	<script src="/ui/topBar.js"></script>
+	<script src="/admin/adminManagement/manageAdmin.js"></script>
 
 </body>
 
