Player Character Component Injection and listing

--- a/public/index.html
+++ b/public/index.html
@@ -65,8 +65,13 @@
 
 	<h1>D.I.C.E L Mart</h1>
 
+	<div id="main-content">
+
+	</div>
+
 	<link rel="stylesheet" href="/style.css">
 	<script src="/ui/topBar.js"></script>
+	<script src="/index.js"></script>
 
 </body>
 
