Create Player Character Flow

--- a/public/ui/topBar-component.html
+++ b/public/ui/topBar-component.html
@@ -16,7 +16,7 @@
         </div>
     </div>
     <div id="top-bar-account-dropdown">
-        <button id="top-bar-sign-in-btn" class="sign-in-btn">Sign In</button>
-        <button id="top-bar-sign-out-btn" class="sign-out-btn" hidden>Sign Out</button>
+        <button id="top-bar-sign-in-btn" onclick="signInButtonClicked()">Sign In</button>
+        <button id="top-bar-sign-out-btn" onclick="signOutButtonClicked()" hidden>Sign Out</button>
     </div>
 </div>
