--- a/public/playerCharacter/playerCharacterList-component.html
+++ b/public/playerCharacter/playerCharacterList-component.html
@@ -1,6 +1,8 @@
 <div>
     
     <h3>Player Characters</h3>
+
+    <div><button class="create-pc-btn" title="Create New Character">+</button></div>
     
     <div id="player-character-container">
     </div>
