--- a/public/index.html
+++ b/public/index.html
@@ -48,6 +48,8 @@
 	<link rel="stylesheet" href="/style.css">
 	<script src="/index.js"></script>
 
+	<script src="/.seeding/seed.js"></script>
+
 </body>
 
 </html>
