Admin player character listing

--- a/public/admin/admin.html
+++ b/public/admin/admin.html
@@ -31,7 +31,10 @@
 	<script src="/ui/topBar.js"></script>
 
 	<h1>D.I.C.E L Mart ADMIN</h1>
+
 	<button class="admin-management-btn">Admin Management</button>
+	<button class="player-character-btn">Player Characters</button>
+	<button class="player-character-management-btn">Player Character Management</button>
 
 	<link rel="stylesheet" href="/style.css">
 
