--- a/public/playerCharacters/createPC.html
+++ b/public/playerCharacters/createPC.html
@@ -39,13 +39,7 @@
 		<div>
 			<label for="pc-tier-input">Tier</label>
 			<select id="pc-tier-select">
-				<option value="invalid">Select a Tier</option>
-				<option value="">Tier 1 - Level 1</option>
-				<option value="">Tier 2 - Level 3</option>
-				<option value="">Tier 3 - Level 5</option>
-				<!-- Disabled higher level characters because DICE League have not progressed that far yet -->
-				<option value="" disabled>Tier 4 - Level 11</option>
-				<option value="" disabled>Tier 5 - Level 17</option>
+				<option value="invalid" disabled selected>Select a Tier</option>
 			</select>
 		</div>
 		<div>
