--- a/public/admin/admin.html
+++ b/public/admin/admin.html
@@ -34,6 +34,7 @@
 
 	<button class="admin-management-btn">Admin Management</button>
 	<button class="player-character-btn">Player Characters</button>
+	<button class="player-character-create-btn">Create Player Character</button>
 	<button class="player-character-management-btn">Player Character Management</button>
 
 	<link rel="stylesheet" href="/style.css">
