Top Bar console switcher

--- a/public/ui/topBar-component.html
+++ b/public/ui/topBar-component.html
@@ -2,6 +2,9 @@
     <img src="/images/D.I.C.E Logo Black.png">
     <p>D.I.C.E L Mart</p>
 </div>
+<div id="switch-player-admin" hidden>
+    <button id="switch-player-admin-btn">Admin Console</button>
+</div>
 <div id="top-bar-account">
     <div id="top-bar-account-profile" class="flex">
         <p id="top-bar-player-name"></p>
