--- a/public/ui/topBar-component.html
+++ b/public/ui/topBar-component.html
@@ -1,6 +1,6 @@
 <div id="top-bar-logo" class="flex">
     <img src="/images/D.I.C.E Logo Black.png">
-    <p>D.I.C.E L Mart</p>
+    <p id="top-bar-log-text">D.I.C.E L Mart</p>
 </div>
 <div id="switch-player-admin" hidden>
     <button id="switch-player-admin-btn">Admin Console</button>
