Manage PC underway

--- a/public/admin/playerCharacters/listPC.html
+++ b/public/admin/playerCharacters/listPC.html
@@ -42,6 +42,8 @@
 					<th>Character Name</th>
 					<th>Tier</th>
                     <th>Remarks</th>
+					<th>Manage</th>
+					<th>Edit</th>
 				</tr>
 			</table>
 		</div>
@@ -53,6 +55,8 @@
                     <th>Level</th>
                     <th>Gold</th>
                     <th>Remarks</th>
+					<th>Manage</th>
+					<th>Edit</th>
 				</tr>
 			</table>
 		</div>
@@ -65,6 +69,8 @@
                     <th>Level</th>
                     <th>Gold</th>
                     <th>Remarks</th>
+					<th>Manage</th>
+					<th>Edit</th>
 				</tr>
 			</table>
 		</div>
