--- a/public/admin/playerCharacters/managePC.html
+++ b/public/admin/playerCharacters/managePC.html
@@ -32,7 +32,20 @@
 
 	<h1>D.I.C.E L Mart ADMIN Player Character Management</h1>
 
+	<h2 id="pc-name-text">Player Character: </h2>
+	<h3 id="pc-player-name-text">Owned by: </h3>
+
+	<!-- TODO add more info, approve button etc. Merge manage and edit? -->
+
+	<div id="pc-container">
+		<div>Tier: </div>
+		<div></div>
+		<div></div>
+	</div>
+
+
 	<link rel="stylesheet" href="/style.css">
+	<script src="/admin/playerCharacters/managePC.js"></script>
 
 </body>
 
