Update admin PC page flow

--- a/public/admin/playerCharacters/listPC.html
+++ b/public/admin/playerCharacters/listPC.html
@@ -32,7 +32,8 @@
 
 	<h1>D.I.C.E L Mart ADMIN Player Characters</h1>
 
-    
+	<button class="player-character-create-btn">Create Player Character</button>
+
 	<div>
 		<div>
 			<h3>Player Characters (Pending Approval)</h3>
