Fix label for select node

--- a/public/admin/playerCharacters/createPC.html
+++ b/public/admin/playerCharacters/createPC.html
@@ -45,7 +45,7 @@
 			<input type="text" id="pc-name-input" placeholder="Shadowheart Mommy">
 		</div>
 		<div>
-			<label for="pc-tier-input">Tier (When the Character is created)</label>
+			<label for="pc-tier-select">Tier (When the Character is created)</label>
 			<select id="pc-tier-select">
 				<option value="invalid" disabled selected>Select a Tier</option>
 			</select>
