--- a/public/playerCharacters/createPC.html
+++ b/public/playerCharacters/createPC.html
@@ -37,7 +37,7 @@
 			<input type="text" id="pc-name-input" placeholder="Shadowheart Mommy">
 		</div>
 		<div>
-			<label for="pc-tier-input">Tier</label>
+			<label for="pc-tier-select">Tier</label>
 			<select id="pc-tier-select">
 				<option value="invalid" disabled selected>Select a Tier</option>
 			</select>
