List PC prettify fix

--- a/public/playerCharacters/listPC-component.html
+++ b/public/playerCharacters/listPC-component.html
@@ -2,7 +2,9 @@
     
     <h3>Player Characters</h3>
 
-    <div><button class="create-pc-btn" title="Create New Character">+</button></div>
+    <div>
+        <button class="create-pc-btn" title="Create New Character">+</button>
+    </div>
     
     <div id="player-character-container">
     </div>
