--- a/public/logSheets/createLogSheet.html
+++ b/public/logSheets/createLogSheet.html
@@ -69,6 +69,7 @@
     </div>
 
     <link rel="stylesheet" href="/style.css">
+    <script src="/logSheets/createLogSheet.js"></script>
 
 </body>
 
