Update rules for level and gold

--- a/public/logSheets/createLogSheet.html
+++ b/public/logSheets/createLogSheet.html
@@ -50,7 +50,7 @@
                 <li>Tier 3 (Level 11-16) = 4 Sessions per Level</li>
                 <li>Tier 4 (Level 17-20) = 5 Sessions per Level</li>
             </ul>
-            <input type="number" id="log-level-input" value="0" step="1">
+            <input type="number" id="log-level-input" value="1" step="1" min="1" max="20">
         </div>
         <div>
             <label for="log-gold-input">Earned/Lost Gold (GP)</label>
