--- a/public/admin/playerCharacters/editPC.html
+++ b/public/admin/playerCharacters/editPC.html
@@ -36,7 +36,7 @@
 	<div id="pc-container">
 		<div>
 			<label for="pc-name-input">Character Name</label>
-			<input type="text" id="pc-name-input" placeholder="Shadowheart Mommy">
+			<input type="text" id="pc-name-input">
 		</div>
 		<div>
 			<label for="pc-player-select">Owning Player</label>
@@ -56,11 +56,11 @@
 		</div>
         <div>
 			<label for="pc-level-input">Current Level</label>
-			<input type="number" id="pc-level-input" min="0" step="1">
+			<input type="number" id="pc-level-input" value="1" step="1" min="1" max="20">
 		</div>
         <div>
 			<label for="pc-gold-input">Current Gold</label>
-			<input type="number" id="pc-gold-input">
+			<input type="number" id="pc-gold-input" value="0">
 		</div>
         <div>
 			<label for="pc-created-timestamp-input">Created Date Time</label>
