Add gold unit label, previous and nett gold values

--- a/public/admin/playerCharacters/createPC.html
+++ b/public/admin/playerCharacters/createPC.html
@@ -57,6 +57,7 @@
         <div>
 			<label for="pc-gold-input">Current Gold</label>
 			<input type="number" id="pc-gold-input" value="0">
+            <label for="pc-gold-input">gp</label>
 		</div>
         <div>
 			<label for="pc-created-timestamp-input">Created Date Time</label>
