Refactor variables in listPC.html and listPC.js

--- a/public/admin/playerCharacters/listPC.html
+++ b/public/admin/playerCharacters/listPC.html
@@ -37,7 +37,7 @@
 	<div>
 		<div>
 			<h3>Player Characters (Pending Approval)</h3>
-			<table id="player-characters-approval-table">
+			<table id="pc-pending-table">
 				<tr>
                     <th>Player Name</th>
 					<th>Character Name</th>
@@ -49,7 +49,7 @@
 		</div>
 		<div>
 			<h3>Player Characters (Unowned)</h3>
-			<table id="player-characters-unowned-table">
+			<table id="pc-unowned-table">
 				<tr>
 					<th>Character Name</th>
                     <th>Level</th>
@@ -61,7 +61,7 @@
 		</div>
 		<div>
 			<h3>Player Characters</h3>
-			<table id="player-characters-valid-table">
+			<table id="pc-valid-table">
 				<tr>
                     <th>Player Name</th>
 					<th>Character Name</th>
