Update admin and player character UI buttons

--- a/public/admin/playerCharacters/listPC.html
+++ b/public/admin/playerCharacters/listPC.html
@@ -32,7 +32,7 @@
 
 	<h1>D.I.C.E L Mart ADMIN Player Characters</h1>
 
-	<button class="player-character-create-btn">Create Player Character</button>
+	<button class="pc-create-btn">Create Player Character</button>
 
 	<div>
 		<div>
