--- a/public/admin/admin.html
+++ b/public/admin/admin.html
@@ -33,7 +33,8 @@
 	<h1>D.I.C.E L Mart ADMIN</h1>
 
 	<button class="admin-management-btn">Admin Management</button>
-	<button class="player-character-btn">Player Characters</button>
+	<button class="pc-btn">Player Characters</button>
+	<button class="logs-btn">Log Sheets</button>
 
 	<link rel="stylesheet" href="/style.css">
 
