Update heading for past log sheets

--- a/public/admin/logSheets/listLogSheets.html
+++ b/public/admin/logSheets/listLogSheets.html
@@ -47,7 +47,7 @@
 			</table>
 		</div>
 		<div>
-			<h3>Past Log Sheets</h3>
+			<h3>Log Sheets (Past)</h3>
 			<table id="log-past-table">
 				<tr>
 					<th>Session Date</th>
